--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="Height">Height:"  "%d </string>
     <string name="Weight">Weight:"  "%d </string>
     <string name="favourites">Favourites</string>
+    <string name="no_favourites_yet">No Favourites Yet</string>
+    <string name="no_results">No Results</string>
 </resources>
